--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <div class="jumbotron jumbotron-fluid bg-primary text-white">
+        <div class="container text-center">
+          <h1 class="display-4">Weather Dashboard</h1>
+        </div>
+    </div>
+    <div class="container-fluid text-center">
+        <div class="row">
+          <div class="col-4 text-start fs-3 fw-bold">
+            <form>
+                <div class="form-group justify-content-start">
+                  <label for="formGroupExampleInput">Search for a City:</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Dallas">
+                  <div class="d-grid gap-2 mt-4">
+                    <button class="btn btn-primary" type="button">Search</button>
+                    <hr>
+                  </div>
+                </div>
+              </form>
+          </div>
+          <div class="col-8">
+            <div class="row">
+                <div class="col">Today's Weather</div>
+            </div>
+            <div class="row">
+                <div class="col">Tomorrow</div>
+                <div class="col">Day 3</div>
+                <div class="col">Day 4</div>
+                <div class="col">Day 5</div>
+                <div class="col">Day 6</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
