Add background color and span tags for card in HTML

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="col-9">
             <div class="row my-2">
                 <div class="col">
-                    <div class="card ">
+                    <div class="card border border-3 border-dark">
                         <div class="card-body">
                           <h5 class="card-title text-start" id="todayCity">Dallas <span id="todayDate"></span><span id="todayIcon">&#x1F324</span></h5>
                           <p class="card-text text-start" id="todayTemp">Temp: <span></span>&#8457</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="card">
+                    <div class="card futureForecast">
                         <div class="card-body">
                           <h5 class="card-title text-start" id="secondDate">Date</h5>
                           <p class="card-text text-start" id="secondIcon">&#9728</p>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card futureForecast">
                         <div class="card-body">
                           <h5 class="card-title text-start" id="thirdTitle">Date</h5>
                           <p class="card-text text-start" id="thirdIcon">&#x1F325</p>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card futureForecast">
                         <div class="card-body">
                           <h5 class="card-title text-start" id="fourthTitle">Date</h5>
                           <p class="card-text text-start" id="fourthIcon">&#x1F326</p>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card futureForecast">
                         <div class="card-body">
                           <h5 class="card-title text-start" id="fifthTitle">Date</h5>
                           <p class="card-text text-start" id="fifthIcon">&#x1F327</p>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
+                    <div class="card futureForecast">
                         <div class="card-body">
                           <h5 class="card-title text-start" id="sixthTitle">Date</h5>
                           <p class="card-text text-start" id="sixthIcon">&#x1F329</p>
