Add buttons for search history

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                     <button class="btn btn-primary" type="button" id="searchButton">Search</button>
                   </div>
                   <hr>
-                  <div class="d-grid gap-2 my-2">
-                    <button class="btn btn-secondary" type="button">Dallas</button>
+                  <div class="d-grid gap-2 my-2" id="searchList">
                   </div>
                 </div>
               </form>
